--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,11 @@ a {
 }
 
 body {
-    color: var(--navyblue, #2E2F42);
+    color: var(--slate, #434455);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 400;
+    background: #FFFFFF;
 }
 
 /* Header */
@@ -20,6 +21,8 @@ body {
     font-size: 18px;
     font-weight: 700;
     text-transform: uppercase;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
 }
 
 .header-logo .accent {
@@ -30,6 +33,7 @@ body {
     color: var(--navyblue, #2E2F42);
     font-weight: 500;
     line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .header-link:hover,
@@ -38,10 +42,16 @@ body {
     text-decoration: underline;
 }
 
-.contacts-link {
-    color: var(--navyblue, #2E2F42);
+.contacts {
     font-style: normal;
+}
+
+.contacts-link {
+    color: var(--slate, #434455);
+    /* font-style: normal; */
     text-decoration: none;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .contacts-link:hover,
@@ -58,7 +68,7 @@ body {
     text-align: center;
     font-size: 56px;
     font-weight: 700;
-    line-height: 1,07;
+    line-height: 1.07;
     letter-spacing: 1.12px;
 }
 
@@ -97,12 +107,18 @@ body {
 }
 
 /* Our Team */
+
+.team-section {
+    background: var(--cloud, #F4F4FD);
+}
+
 .section-title {
     text-align: center;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.72px;
+    text-transform: capitalize;
 } 
 
 .team-card {
@@ -128,6 +144,8 @@ body {
     letter-spacing: 0.32px;
 }
 
+/* Our Portfolio */
+
 .project-card {
     width: 360px;
     height: 420px;
@@ -140,6 +158,7 @@ body {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
+    text-transform: capitalize;
 }
 
 .project-text {
@@ -148,13 +167,13 @@ body {
     letter-spacing: 0.32px;
 }
 
-footer {
+.footer {
     background: var(--navyblue, #2E2F42);
 }
 
 .footer-logo {
     color: var(--iris, #4D5AE5);
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
