--- a/css/styles.css
+++ b/css/styles.css
@@ -79,21 +79,22 @@ body {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.64px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     background: var(--iris, #4D5AE5);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); */
     cursor: pointer;
 }
 
 .hero-button:hover,
 .hero-button:focus {
     background: var(--ocean, #404BBF);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); */
 }
 
 /* Our features */
 
 .features-title {
+    color: var(--navyblue, #2E2F42);
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -112,24 +113,16 @@ body {
     background: var(--cloud, #F4F4FD);
 }
 
-.section-title {
-    text-align: center;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-} 
-
 .team-card {
-    width: 264px;
-    height: 380px;
+    /* width: 264px; */
+    /* height: 380px; */
     border-radius: 0px 0px 4px 4px;
     background: var(--white, #FFF);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
 }
 
 .person-name {
+    color: var(--navyblue, #2E2F42);
     text-align: center;
     font-size: 20px;
     font-weight: 500;
@@ -146,14 +139,25 @@ body {
 
 /* Our Portfolio */
 
+.section-title {
+    color: var(--navyblue, #2E2F42);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
 .project-card {
-    width: 360px;
-    height: 420px;
-    border: 1px solid var(--cornflower, #E7E9FC);
+    /* width: 360px; */
+    /* height: 420px; */
+    /* border: 1px solid var(--cornflower, #E7E9FC); */
     background: var(--white, #FFF);
 }
 
 .project-title {
+    color: var(--navyblue, #2E2F42);
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
