--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ body {
 .team-card {
     /* width: 264px; */
     /* height: 380px; */
-    border-radius: 0px 0px 4px 4px;
+    /* border-radius: 0px 0px 4px 4px; */
     background: var(--white, #FFF);
     /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
 }
